AM 23/05/08
- Improved KingParser; it now performs some check about file format, and
  print out the appropriate exceptions.

MJ 21/05/08
- Fixed serious initialization bug in MedianStats
- Changed OracleIdleProtocol, UniformRandomTransport and UnreliableTransport
  into final, due to their unconventional implementation of "clone" (they are
  singletons)
- Fixed minor issues in IncrementalFreq related to java conventions on equals
  and hashCode
- Added "close" for various unclosed streams (no serious issues, but it was
  not nice in any case)
- Various minor issues found by FindBugs (that is also responsible for the
  items above)

MJ 20/04/08
- Refactoring of EDSimulator to support the application of any event queue
  implementation. The even queue can now be configured to be any extrenal class
  implementing peersim.edsim.PriorityQ. Tests show there is no noticeable
  penalty for performance. (credit to Jan Schoenherr for pointing out some
  issues with edsim)
- Fixing various problems with handling integer overflow in time management in
  EDSimulator, Heap, and Scheduler.

MJ 18/04/08
- Changed truncation to rounding (as stated in the class docs) for
  DynamicNetwork. This fixes issues with small network sizes (or small "add"
  percentages).
- Fixed bug in RandNI: it assumed it is called after insertion, while the
  specification says it is called before insertion. This caused misbehavior for
  networks of size 1, and, more annoyingly, resulted in the node with index 0
  _never_ being linked to in any network of any size
  (note that for simulations that use shuffle (and most do)
  this is not noticable) (credit for spotting goes to Balazs Banhelyi).

AM 07/04/08
- Applied the javadoc patch of Filippo Giunchedi

MJ 18/03/08
- Added a "k" parameter to WireFromFile
- Added some popular file formats to GraphPrinter (as well as GraphIO)

MJ 24/02/08
- Added a "background" parameter to PeakDistribution and improved the docs of